# mochi-mcp

./: README.md  pyproject.toml
src/mochi_mcp/: __init__.py  __main__.py  api.py  config.py  server.py
tests/: test_client.py  test_server.py
