[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mochi-mcp"
version = "0.1.0"
description = "MCP server for the Mochi flashcard app"
authors = [
  {name = "AI Assistant"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "httpx>=0.28.0",
  "mcp[cli]>=1.21.0",
  "pydantic>=2.12.0",
  "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4",
  "pytest-asyncio>=1.3",
]

[project.scripts]
mochi-mcp = "mochi_mcp.__main__:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-ra"
